Updating to ftsl9

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,24 +2,10 @@
 <resources>
 
     <string-array name="nav_menu_items">
-        <item>Explore</item>
-        <item>My Agenda</item>
-        <item>Map</item>
-        <item>About</item>
-    </string-array>
-
-    <string-array name="event_types_items">
-        <item>All sessions</item>
-        <item>Lecture</item>
-        <item>Workshop</item>
-        <item>Community Meeting</item>
-        <item>Others</item>
-    </string-array>
-
-    <string-array name="event_day_week">
-        <item>wed</item>
-        <item>thu</item>
-        <item>fri</item>
+        <item>Explorar</item>
+        <item>Minha Agenda</item>
+        <item>Mapa</item>
+        <item>Sobre</item>
     </string-array>
 
 </resources>
